choose-mirror (1.12) UNRELEASED; urgency=low

  * Colin Watson
    - Switch to using iso_3166.xml rather than the deprecated iso_3166.tab,
      by the crude method of copying iso3166tab.py from the iso-codes source
      to convert it to the old .tab format for us on the fly.
    - Build-depend on the first version of iso-codes that shipped
      /usr/share/xml/iso-codes/iso_3166.xml.

 -- Colin Watson <cjwatson@debian.org>  Fri,  3 Jun 2005 12:10:54 +0100

choose-mirror (1.11) unstable; urgency=low

  * Colin Watson
    - Support Archive-architecture: in Mirrors.masterlist. Architectures are
      space-separated, e.g. "i386 amd64"; lines of the form "!hurd-i386
      !netbsd-i386" are supported to say that the archive has all but the
      listed architectures, although that should be used with caution.
    - List country codes as C choices for mirror/*/countries, and add a
      Choices-en.UTF-8 with the English country names (closes: #311021).
    - Add myself to Uploaders.
  * Updated translations:
    - Arabic (ar.po) by Ossama M. Khayat
    - German (de.po) by Dennis Stampfer
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Spanish (es.po) by Javier Fernández-Sanguino Peña
    - Hebrew (he.po) by Lior Kaplan
    - Italian (it.po) by Giuseppe Sacco
    - Korean (ko.po) by Changwoo Ryu
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
    - Albanian (sq.po) by Elian Myftiu
    - Turkish (tr.po) by Recai Oktaş

 -- Colin Watson <cjwatson@debian.org>  Wed,  1 Jun 2005 01:35:58 +0100

choose-mirror (1.10) unstable; urgency=low

  * Colin Watson
    - Remove English "translation", obsoleted by new build system.
    - Fix country sorting (don't split on backslash-escaped commas). Closes: #307989
  * Updated translations: 
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul
    - Greek, Modern (1453-) (el.po) by Kostas Papadimas
    - Spanish (es.po) by Enrique Matias Sanchez
    - Basque (eu.po) by n