@@ -6,6 +6,8 @@ choose-mirror (1.12) UNRELEASED; urgency=low
       to convert it to the old .tab format for us on the fly.
     - Build-depend on the first version of iso-codes that shipped
       /usr/share/xml/iso-codes/iso_3166.xml.
+    - Allow an alternate location for Mirrors.masterlist to be given on the
+      mirrorlist command line, and add Makefile support for this.
 
  -- Colin Watson <cjwatson@debian.org>  Fri,  3 Jun 2005 12:10:54 +0100
 
